--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-
+    <div id="app"></div>
+    <script type="text/javascript" src="<%= require('file-loader!../lib/vendor.dll.js') %>"></script>
 </body>
 </html>
