--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script type="text/javascript" src="<%= require('file-loader!../lib/vendor.dll.js') %>"></script>
+    <!-- <script type="text/javascript" src="<%= require('file-loader!../lib/vendor.dll.js') %>"></script> -->
 </body>
 </html>
